Enum user_status_enum {  
  unconfirmed
  suspicious
  dormant
  banned
  active
}

Table users {
  id integer [primary key, increment]
  email varchar [unique, not null]
  password_hash varchar [not null]
  
  is_global_active boolean [default: true]
  is_admin boolean [default: false]
  user_status user_status_enum [default: 'unconfirmed']
  
  tz varchar(50) [not null, default: 'Europe/London']

  date_last_seen timestamptz
  date_created timestamptz [default: `now()` ]
}

Table user_profiles {
  id integer [primary key, increment]
  user_id integer [not null]

  handle varchar [not null] // eg /u/bruce-thomas
  fullname varchar [not null]
  phone_number varchar [not null, default: ''] // eg. "07594616416" or "+44 7594 616 416"
  description text [default: '']
  avatar_url varchar [default: ''] // no avatar uses fullanme initials eg BT

  currency_code char(3)  [not null, default: 'GBP'] // USD, GBP, EUR
  flag_emoji varchar [not null, default: '🏳️'] // the users country origin

  payment_methods json [default: '{"monzo": null, "revolut": null, "paypal": null, "bank": { "name": null, "sort_code": null, "account_number": null, "iban": null } }'] // Object of payment methods eg. { "monzo": "https://monzo.me/brucethomas", "revolut": "https://revolut.me/brucethomas", "paypal": "https://paypal.me/brucethomas", "bank": { "name": "Bruce Thomas", "sort_code": "123456", "account_number": "12345678", "iban": "GB1234567812345678" } } 

  date_created timestamptz [default: `now()` ]
  is_profile_active boolean [default: true]
}

Table venues {
  id integer [primary key, increment]
  name varchar(255) [not null] // eg. "Homerton Library"

  address_line_1 varchar(255) [not null] // eg. "123 Main St"
  address_line_2 varchar(255) [default: ''] // eg. "Suite 456"
  address_city varchar(100) [not null, default: 'London'] // eg. "London"
  address_county varchar(100) [default: ''] // eg. "London"
  address_postcode varchar(20) [not null, default: 'UNKNOWN'] // eg. postcode/zip "SW1A 1AA"
  address_area varchar(100) [default: ''] // eg. "Camden"
  tz varchar(50) [not null, default: 'Europe/London']
  
  capacity integer [not null, default: 0] // max number of attendees
  venue_tags json [not null, default: '[]'] // eg. ["parking", "step-free", "wheelchair"]
  comments text [default: ''] // eg. Use the entrance on Gravel Road, dial 101 on the innercom and take elevator to 1st floor
  active boolean [not null, default: true]
   
  latitude decimal(10,8)
  longitude decimal(11,8)

  date_created timestamptz [not null, default: `now()`]
  date_modified timestamptz [not null, default: `now()`]
}

Enum event_status_enum {  
  cancelled
  closed
  confirmed
  noshow
  opencall
  pending
}

Table calendar {
  id integer [primary key, increment]
  event_id integer
  user_id integer

  status event_status_enum

  attendance_inperson integer [default: 0]
  attendance_online integer [default: 0]

  date_time datetime // yyyymmdd hh:mm:ss
  duration decimal [ not null, default: 2.0 ] // hours 2.5

  pose_format text // session's pose format (inherit from event) eg. 5x90sec, 2x5min, 3x10min, break, 2x25min
}

Table models {
  id integer [primary key, increment]

  user_id integer [not null]
  display_name varchar // known as Palendromic
  description text [not null, default: '']
  
  currency_code char(3) [not null, default: 'GBP']

  portrait_urls json [default: '[]'] // main profile image

  rate_min_hour decimal [default: 20.0]
  rate_min_day decimal [default: 120.0]
  
  work_inperson boolean [default: true]
  work_online boolean [default: false]
  work_photography boolean [default: false]

  work_seeks json [not null, default: '["nude", "portrait", "clothed", "underwear", "costume"]'] // String[]: nude, partial, fashion, costume, bodypaint ...

  website_urls json [default: '[]'] // String[] of website URLs eg. ["https://handle.etsy.com", "https://handle.gumroad.com"]
  social_handles json [default: '{}'] // Object of social handles eg. { "instagram": "handle", "twitter": "handle", "tiktok": "handle" }

  date_birthday timestamptz // legal age 20
  date_experience timestamptz // years of experience

  sex sex_enum [not null, default: 'unspecified']
  pronouns varchar [not null, default: ''] // he/him she/her they/them
  date_created timestamptz [not null, default: `now()` ]
}

Enum sex_enum {
  unspecified
  male
  female
}

Table hosts {
  id integer [primary key, increment]
  user_id integer [not null]

  name varchar [not null]
  description text

  social_handles json [default: '{}'] // String[] of social handles eg. [{ "instagram": "handle" }, { "twitter": "handle" }, { "tiktok": "handle" }]

  default_date_time timestamptz [not null, default: '1970-01-01T00:19:00.000Z'] // eg. 19:00:00
  default_duration decimal [not null, default: 2.0] // hours
  
  rate_max_hour decimal [not null, default: 25.00] // per hour
  rate_max_day decimal [not null, default: 150.00] // six hours

  date_created timestamptz [not null, default: `now()`]
  host_tags json [not null, default: '[]'] // from database.json venues "tag" eg. ["heating", "materials", "lights", "snacks"]
}

Enum frequency_enum {
  adhoc
  once
  daily
  weekly
  biweekly
  triweekly
  monthly
  quarterly
  annually
}

Enum week_day_enum {
  sunday
  monday
  tuesday
  wednesday
  thursday
  friday
  saturday
  unknown
}

Table events {
  id integer [primary key, increment]
  venue_id integer [null] // nullable for online events
  user_id integer [not null]
  name varchar [not null] //eg. "Drawing in the Library"
  description varchar // eg. "Join us for the weekly session in the Homerton Library"
  images json [not null, default: '[]'] // String[] eg. ["https://domain.com/image.jpg"]

  tz varchar(50) [not null, default: 'Europe/London']

  frequency frequency_enum [not null, default: 'weekly']
  week_day week_day_enum [not null, default: 'unknown']

  pricing_table json [not null, default: '[]'] // String[]: [ticket-name,ticket-price] eg. ["General Admission", 10.00, "Student", 5.00]
  pricing_text text [not null, default: ''] // plain-text (no HTML) eg. "Bring your own and get a 10% discount, bring a friend and get a 20% discount"
  pricing_tags json [not null, default: '[]'] // eg. String[]: eg. ["loyalty", "cash", "card", "paypal"]

  pose_format text [not null, default: 'Mixed poses: gesture, short, medium, long'] // general pose format, for an event, inherited by the calendar session
}

Table exchange_rates {
  currency_code char(3) [primary key]
  rate_to_usd decimal(10,6) [not null]
  updated_at timestamptz [not null, default: `now()`]
}

Table tracking {
  id integer [primary key, increment]
  user_id integer [not null]
  href varchar [not null]
  timestamp timestamptz
}

Ref: "user_profiles"."user_id" < "users"."id" [delete: cascade]
Ref: "models"."user_id" < "users"."id" [delete: cascade]
Ref: "hosts"."user_id" < "users"."id" [delete: cascade]
Ref: "events"."user_id" < "users"."id" [delete: cascade]
Ref: "events"."venue_id" < "venues"."id" [delete: set null]
Ref: "calendar"."user_id" < "users"."id" [delete: cascade]
Ref: "tracking"."user_id" < "users"."id" [delete: cascade]
Ref: "calendar"."event_id" < "events"."id" [delete: cascade]